--- a/forecast.html
+++ b/forecast.html
@@ -45,8 +45,8 @@
 
 
   <head>
-    <title>Rolloutmonitor</title>
     <link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
+    <title>{{ site.title }}</title>
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
