--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Rolloutmonitor</title>
+	<title>{{ site.title }}</title>
 	<link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
 	<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.css">
@@ -113,8 +113,8 @@
 					</div>
 					<p class=" section-paragraph">Dieses Dashboard soll Ihnen einen schnellen Überblick
 						über
-						alle laufenden, geplanten und ungeplanten Projekte geben. Weiterhin gibt es eine
-						Archivfunktion für die vergangenen
+						alle aktuellen und geplanten Rolloutprojekte geben. <br>Weiterhin finden sie ein
+						Archiv mit den abgeschlossenen Rolloutprojekte der vergangenen
 						Jahre.</p>
 					<p class="section-paragraph"> Bei Fragen, Problemen und Anregungen nutzen Sie den
 						untenstehenden Link.</p>
@@ -135,8 +135,8 @@
 										</g>
 									</svg>
 								</div>
-								<h4 class="feature-title h3-mobile mb-8">Laufende Rolloutprojekte</h4>
-								<p class="text-sm">Detaillierte Übersicht über laufende Rolloutprojekte</p>
+								<h4 class="feature-title h3-mobile mb-8">Aktuelle Rolloutprojekte</h4>
+								<p class="text-sm">Detaillierte Übersicht der aktuellen Rolloutprojekte</p>
 								<button class="go-to-button"
 									style="margin-left: -70px; position:absolute; border: none; color: white; padding: 5px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer; border-radius: 25px; font-weight: bold; background-color:#FF6381"
 									onclick="location.href='detail.html';">Detailplanung</button>
@@ -167,7 +167,7 @@
 
 								</div>
 								<h4 class="feature-title h3-mobile mb-8">Geplante Rolloutprojekte</h4>
-								<p class="text-sm">Forecast für alle geplanten Rolloutprojekte</p>
+								<p class="text-sm">Forecast der geplanten Rolloutprojekte</p>
 								<button class="go-to-button"
 									style="margin-left: -50px; position:absolute; border: none; color: white; padding: 5px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer; border-radius: 25px; font-weight: bold; background-color:#4950F6"
 									onclick="location.href='forecast.html';">Forecast</button>
