--- a/forecast.html
+++ b/forecast.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>My Website</title>
+  <title>Rolloutmonitor</title>
   <style>
     :root {
       --font-big-size: 2rem;
@@ -44,39 +44,37 @@
   </style>
 
 
-  <head>
-    <link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
-    <title>{{ site.title }}</title>
-    <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="table.css">
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="search_and_refresh.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="info_box.css">
-    <link rel="stylesheet" href="background.css">
-    <link rel="stylesheet" href="div.css">
-    <link rel="stylesheet" href="popup.css">
-  </head>
+  <link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
+  <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="table.css">
+  <link rel="stylesheet" href="nav.css">
+  <link rel="stylesheet" href="search_and_refresh.css">
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="info_box.css">
+  <link rel="stylesheet" href="background.css">
+  <link rel="stylesheet" href="div.css">
+  <link rel="stylesheet" href="popup.css">
+</head>
 
-  <nav>
-    <div class="left">
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/1200px-McDonald%27s_Golden_Arches.svg.png"
-        alt="McDonald's logo">
-      <h2>McDonald's Rolloutmonitor</h2>
-    </div>
-    <div class="right">
-      <a href="index.html">Home</a>
-      <a href="detail.html">Detailplanung</a>
-      <a href="archiv.html">Archiv</a>
-    </div>
-  </nav>
+<nav>
+  <div class="left">
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/McDonald%27s_Golden_Arches.svg/1200px-McDonald%27s_Golden_Arches.svg.png"
+      alt="McDonald's logo">
+    <h2>McDonald's Rolloutmonitor</h2>
+  </div>
+  <div class="right">
+    <a href="index.html">Home</a>
+    <a href="detail.html">Detailplanung</a>
+    <a href="archiv.html">Archiv</a>
+  </div>
+</nav>
 
 </head>
 
