--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{{ site.title }}</title>
+	<title>Rolloutmonitor</title>
 	<link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
 	<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.css">
