--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Rolloutmonitor</title>
+	<title>Rollout Monitor</title>
 	<link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
 	<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.css">
@@ -109,15 +109,15 @@
 							alt="McDonald's logo"
 							style="display: block; margin: auto auto; width:100px; text-align: center;">
 						<h2 style="margin:0px; color:white">McDonald's
-							Rolloutmonitor</h2>
+							Rollout Monitor</h2>
 					</div>
 					<p class=" section-paragraph">Dieses Dashboard soll Ihnen einen schnellen Überblick
 						über
 						alle aktuellen und geplanten Rolloutprojekte geben. <br>Weiterhin finden sie ein
 						Archiv mit den abgeschlossenen Rolloutprojekte der vergangenen
 						Jahre.</p>
-					<p class="section-paragraph"> Bei Fragen, Problemen und Anregungen nutzen Sie den
-						untenstehenden Link.</p>
+					<p class="section-paragraph"> Bei Fragen, Problemen oder Anregungen nutzen Sie bitte den
+						untenstehenden Kontaktmöglichkeiten.</p>
 
 				</div>
 
@@ -200,9 +200,6 @@
 
 			</section>
 
-
-
-
 		</main>
 
 		<div style="background-color: var(--main-medium);">
@@ -211,10 +208,13 @@
 
 				<p style="color:white; margin:0px; font-size: 15px; font-weight: bold;">Fragen oder Probleme mit
 					dem
-					Rolloutmonitor?</p>
+					Rollout Monitor?</p>
 				<button class="contact-button"
-					onclick="location.href='mailto:torsten.mitte.extern@de.mcd.com?cc=almista01@gmail.com&subject=Frage bezüglich Rolloutmonitor';">Schreiben
+					onclick="location.href='mailto:torsten.mitte.extern@de.mcd.com?cc=almista01@gmail.com&subject=Frage bezüglich Rollout Monitor';">Schreiben
 					Sie uns</button>
+				<p style="color:white; margin:0px; font-size: 15px; font-weight: bold;">Oder per Telefon: 0172/3841911
+					(Torsten Mitte)
+				</p>
 
 			</div>
 		</div>
