--- a/archiv.html
+++ b/archiv.html
@@ -36,8 +36,6 @@
     }
   </style>
 
-
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -105,9 +103,11 @@
       <div class="info-box__icon">i</div>
       <div class="info-box__text">
         Diese Seite bietet Ihnen einen Überblick über alle abgeschlossenen Rolloutprojekte der vergangenen Jahre.
-        <br>
-        In der Übersicht kann in allen Spalten über das Suchfeld gefiltert werden. Änderungen werden dabei nur temporär
-        vorgenommen. Nach dem Drücken des Buttons "Aktualisieren" wird die Übersicht aus dem Masterdokument geladen.
+        <br> Über das
+        Suchfeld kann gezielt nach einzelnen Einträgen gesucht werden. Mit einem Klick auf einen der Spaltenköpfe kann
+        die Tabelle entsprechend sortiert werden. <br> Änderungen werden dabei nur temporär vorgenommen. Nach dem
+        Drücken des Buttons
+        "Aktualisieren" wird die Übersicht aus dem Masterdokument neu geladen.
 
       </div>
     </div>
