--- a/detail.html
+++ b/detail.html
@@ -100,7 +100,7 @@
     <div class="info-box">
       <div class="info-box__icon">i</div>
       <div class="info-box__text">
-        Diese Seite bietet Ihnen einen Überblick über alle abgeschlossenen Rolloutprojekte der vergangenen Jahre. <br>
+        Diese Seite bietet Ihnen einen detaillierten Überblick über alle laufenden Rolloutprojekte. <br>
         Nach dem Drücken des Buttons "Aktualisieren" wird die Übersicht aus dem Masterdokument neu geladen.
       </div>
     </div>
