--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 					<p class=" section-paragraph">Dieses Dashboard soll Ihnen einen schnellen Überblick
 						über
 						alle aktuellen und geplanten Rolloutprojekte geben. <br>Weiterhin finden sie ein
-						Archiv mit den abgeschlossenen Rolloutprojekte der vergangenen
+						Archiv mit den abgeschlossenen Rolloutprojekten der vergangenen
 						Jahre.</p>
-					<p class="section-paragraph"> Bei Fragen, Problemen oder Anregungen nutzen Sie bitte den
+					<p class="section-paragraph"> Bei Fragen, Problemen oder Anregungen nutzen Sie bitte eine der
 						untenstehenden Kontaktmöglichkeiten.</p>
 
 				</div>
@@ -212,8 +212,9 @@
 				<button class="contact-button"
 					onclick="location.href='mailto:torsten.mitte.extern@de.mcd.com?cc=almista01@gmail.com&subject=Frage bezüglich Rollout Monitor';">Schreiben
 					Sie uns</button>
-				<p style="color:white; margin:0px; font-size: 15px; font-weight: bold;">Oder per Telefon: 0172/3841911
-					(Torsten Mitte)
+				<p style="color:white; margin:0px; margin-top:10px; font-size: 15px; font-weight: bold;">oder per
+					Telefon: 0172/3841911
+					(Ansprechpartner: Torsten Mitte)
 				</p>
 
 			</div>
