--- a/minigame.html
+++ b/minigame.html
@@ -99,7 +99,7 @@
     <div class="info-box" style="margin-bottom: 30px;">
         <div class="info-box__icon">i</div>
         <div class="info-box__text">
-            Ein kleines Minigame für zwischendurch. Viel Spaß!
+            Have fun!
         </div>
     </div>
     <script>
